dfir_rs/tests/compile-fail-stable/surface_loop_badlifetime.rs
../compile-fail/surface_loop_badlifetime.rs